2010-03-25  Ozkan Sezer <sezeroz@gmail.com>

	* Sync'ed with wine-1.1.41 release version.
	* d3dx9effect.h: added from the wine sources.

2010-03-15  Ozkan Sezer <sezeroz@gmail.com>

	* d3dx9shader.h (ID3DXConstantTable_SetMatrixTranspose): Fix typo.
	From wine git commit 8991b214b6a60ccd52c4cf493c0486a8e3728d8f .

2010-03-07  Jonathan Yong  <jon_y@users.sourceforge.net>

	* dvdevcod.h: Add from sourceware w32api.
	* edevdefs.h: Ditto.

	* dvdevcod.h: Add copyright notice and remove pragma system_header.
	* edevdefs.h: Ditto.

2010-02-23  Ozkan Sezer <sezeroz@gmail.com>

	* d3dx9shader.h: Merged d3dx9_36 fix of Christian Costa from wine
	git-3138ba0d5cfcd37d3b457916240a7e20a08f047c / 2010-02-21: Fix
	AddRef and Release macros and add IID for ID3DXConstantTable.

2010-02-20  Ozkan Sezer <sezeroz@gmail.com>

	* dvdmedia.h: added from the wine sources.
	* Sync'ed with wine-1.1.39 release version.

2010-02-14  Ozkan Sezer <sezeroz@gmail.com>

	* amaudio.h: quartz: Fix IAMDirectSound interface definition. (from
	wine git 28acc8398c58f0326d2e3bb21dd9406b9f480529 / 7 Feb 2010.)

	* d3dx9shader.h: Add definition for ID3DXConstantTable. (from wine
	git 6b890be5512e748412a0e21ed3f0329f1aef3057 / 11 Feb 2010)

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	* dmoreg.h: Made it C++ compatible by adding extern "C" { ... }
	when __cplusplus ies defined.

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	* added dmodshow, medparam and qnetwork *.idl and *.h files from the
	KDE project.
	* added amstream and vmr9 *.idl and *.h files from wine sources.

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	Merged with the dx headers from wine-1.1.38 including the missing
	d3drmobj.h, mediaerr.h and mediaobj.h, as well as the new d3dx9
	additions.

2010-02-11  Ozkan Sezer <sezeroz@gmail.com>

	* dshow.h: Updated from wine-1.1.38.
	* amaudio.h, amvideo.idl, amvideo.h, audevcod.h, errors.h, evcode.h,
	vfwmsgs.h: Added missing dshow dependency headers from wine-1.1.38.
